@@ -3,7 +3,7 @@
 @cd /d "%~dp0"
 
 echo Running Application
-java -jar music-app/target/music-app-1.0-SNAPSHOT.jar
+java --module-path "D:\javafx-sdk-24\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base -jar music-app\target\music-app-1.0-SNAPSHOT.jar
 
 echo Operation Completed!
 pause
